buy and sell flow added